# app/Models/DocumentTemplate.php
@@ -88,6 +88,11 @@ class DocumentTemplate extends Model
                 'rental_agreement.currency',
                 'rental_agreement.status',
                 'rental_agreement.notes',
+                'bank_account.id',
+                'bank_account.account_holder',
+                'bank_account.iban',
+                'bank_account.bic',
+                'bank_account.bank_name',
                 'property.id',
                 'property.unit_number',
                 'property.type',
